--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: java-app-service
-  namespace: github-action-ns
+  namespace: github-action-svsiv
 spec:
   type: LoadBalancer
   selector:
